[package]
name = "actix-tail"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-identity = "0.2"
actix-rt = "1.0"
actix-web = { version = "2.0", features = ["rustls"] }
bytes = "0.5"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
exitfailure = "0.5"
log = "0.4"
env_logger = "0.7"
